<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/dialog_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp">
        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title"/>
        <TextView
            android:id="@+id/dialog_title_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp">
        <TextView
            android:id="@+id/dialog_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_format"/>
        <TextView
            android:id="@+id/dialog_format_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp">
        <TextView
            android:id="@+id/dialog_pagecount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_pagecount"/>
        <TextView
            android:id="@+id/dialog_pagecount_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp">
        <TextView
            android:id="@+id/dialog_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_price"/>
        <TextView
            android:id="@+id/dialog_price_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp">
        <TextView
            android:id="@+id/dialog_creators"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_creators"/>
        <TextView
            android:id="@+id/dialog_creators_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/dialog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_button"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"/>
</LinearLayout>